--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset='utf-8' />
         <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+		<meta property="og:image" content="slides/img/mario.png"/>
+
         <meta name="description" content=" INTRODUÇÃO AO DESENVOLVIMENTO DE JOGOS COM HTML5 : Conteúdo INTRODUÇÃO AO DESENVOLVIMENTO DE JOGOS COM HTML5 - por Victor / Heberth" />
 
         <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
